--- a/Servidor/docker-compose.yml
+++ b/Servidor/docker-compose.yml
@@ -2,12 +2,18 @@ version: '3.8'
 
 networks:
   kafka-net:
+    ipam:
+      driver: default
+      config:
+        - subnet: 172.16.238.0/24
 
 services:
   zookeeper:
     image: bitnami/zookeeper:latest
     networks:
-      - kafka-net
+      kafka-net:
+      #Agregado para evitar cambiar la ip en /etc/hosts
+        ipv4_address: 172.16.238.10
     ports:
       - "2181:2181"
     environment:
@@ -16,11 +22,13 @@ services:
   kafka:
     image: bitnami/kafka:latest
     networks:
-      - kafka-net
+      kafka-net:
+      #Agregado para evitar cambiar la ip en /etc/hosts
+        ipv4_address: 172.16.238.11
     ports:
       - "9092:9092"
     environment:
-      - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
+      - KAFKA_CFG_ZOOKEEPER_CONNECT=172.16.238.10:2181
       - ALLOW_PLAINTEXT_LISTENER=yes
       - KAFKA_CFG_LISTENERS=PLAINTEXT://0.0.0.0:9092
-      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://172.16.238.11:9092
