--- a/Servidor/docker-compose.yml
+++ b/Servidor/docker-compose.yml
@@ -12,7 +12,6 @@ services:
     image: bitnami/zookeeper:latest
     networks:
       kafka-net:
-      #Agregado para evitar cambiar la ip en /etc/hosts
         ipv4_address: 172.16.238.10
     ports:
       - "2181:2181"
@@ -20,10 +19,9 @@ services:
       - ALLOW_ANONYMOUS_LOGIN=yes
 
   kafka:
-    image: bitnami/kafka:latest
+    build: .
     networks:
       kafka-net:
-      #Agregado para evitar cambiar la ip en /etc/hosts
         ipv4_address: 172.16.238.11
     ports:
       - "9092:9092"
